fix: sistemato overflow finestra del carrello

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,13 @@ strong {
 
 .cartBanner .cartProductsNum {
   margin-right: 20px;
+
+  /* background: crimson;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  display: inline-block; */
 }
 
 .cartBanner .cartBtn {
@@ -227,6 +234,23 @@ strong {
   width: 20%;
   margin-top: -85px;
   transition: color, width 0.35s ease;
+  max-height: 170vmin;
+}
+
+.showCart .stuff {
+  max-height: 80%;
+  overflow-y: scroll;
+  background: rgb(233, 154, 97);
+  border-radius: 5px;
+  padding: 5px;
+
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */  
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.showCart .stuff::-webkit-scrollbar {
+  display: none;
 }
 
 .wrapperOfWrappers {
@@ -239,3 +263,4 @@ strong {
   transition: color, width 0.35s ease;
   padding: 0;
 }
+
